# MPR

./: .gitignore  README.md  pyproject.toml  rewrite-mailmap.txt
examples/: run_demo.py  run_gaussian_demo.py
src/lane_residuals/: __init__.py  cli.py  gaussian.py  inspect_mcap.py  mcap_io.py  open_mcap.py  plotting.py  preprocessing.py  residuals.py
tests/: test.py  test_gaussian.py  test_mcap_io.py  test_preprocessing.py  test_residuals.py
