[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "minimal-lane-residual-model"
version = "0.2.0"
description = "Minimal lane-residual extraction and unconditional Gaussian modelling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]
