[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "minimal-lane-residual-model"
version = "0.3.1"
description = "MCAP lane-path discrepancy extraction and Gaussian modelling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
mcap = [
    "mcap>=1.2.1",
    "mcap-protobuf-support>=0.5.2",
    "protobuf>=4.25",
]

[project.scripts]
mpr-mcap = "lane_residuals.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
